add search and proxy

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ URL: <input type="text" id="action">
 Content:  <input type="text" id="param">
 <input type="button" value="GET" onclick="fixcall('action', 'reparea', 'GET')">
 <input type="button" value="POST" onclick="fixcall('action', 'reparea', 'POST', 'param')">
+<hr/>
+Google <input type="text" id="google">
+<input type="button" value="Search" onclick="goosearch('google')">
+<hr/>
+Cross <input type="text" id="cross">
+<input type="button" value="Proxy" onclick="crosswall('cross')">
 <div id="reparea"></div>
 <script type="text/javascript" src="func.js"></script>
 </body>
