--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 	<input type="button" value="保存" onclick="saveBlog('eDay', 'e01', 'eTag')" />
 </div>
 
-<script type="text/javascript" src="/theme/js/jquery-3.0.0.min.js"></script>
-<script type="text/javascript" src="/theme/js/door.js?v=5"></script>
+<script type="text/javascript" src="/theme/js/jquery-3.4.1.min.js"></script>
+<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+<script type="text/javascript" src="/theme/js/door.js?v=3"></script>
 </body>
 </html>
