feat: use self tid instead of official tiddlywiki

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-tiddly.html
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <title>蛙二的记忆</title>
+  <link href="/style.css?v9" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <article>
+	<p>不积跬步，无以至千里；不积小流，无以成江海。</p>
+	<p>记录学习的点滴，留下成长的印记。</p>
+	<h2>思考与沉淀</h2>
+	  <h3><a href="/rumi/vcs.html">版本管理工具</a></h3>
+	  <h3><a href="/rumi/lua_c_exchange.html">Lua与C语言的交互</a></h3>
+	  <h3><a href="/rumi/learn_lua.html">Lua语言学习总结</a></h3>
+	  <h3><a href="/rumi/learn_scheme.html">Scheme语言学习总结</a></h3>
+	<h2>整理中</h2>
+      <h3><a href="">对Linux系统的理解</a></h3>
+	  <h3><a href="">我所熟悉的动态语言</a></h3>
+	  <h3><a href="">Web开发和这个站点的历程</a></h3>
+	  <h3><a href="">域名和DNS</a></h3>
+	  <h3><a href="">协议工作的感悟</a></h3>
+	<hr>
+	  <p>随手记录的工作内容、踩坑、感悟片断，成熟了便有了完整的文章</p>
+	  <h3><a href="/tm.html">我的日常笔记</a></h3>
+  </article>
+  <footer class="footer">© 2014 - 2024</footer>
+</body>
+</html>
