--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 	  <h3><a href="/rumi/lua_c_exchange.html">Lua与C语言的交互</a></h3>
 	  <h3><a href="/rumi/learn_lua.html">Lua语言学习总结</a></h3>
 	  <h3><a href="/rumi/learn_scheme.html">Scheme语言学习总结</a></h3>
+	  <h3><a href="/rumi/protocol_work.html">协议工作的感悟</a></h3>
 	<h2>整理中</h2>
-      <h3><a href="">对Linux系统的理解</a></h3>
+	  <h3><a href="">对Linux系统的理解</a></h3>
 	  <h3><a href="">我所熟悉的动态语言</a></h3>
 	  <h3><a href="">Web开发和这个站点的历程</a></h3>
 	  <h3><a href="">域名和DNS</a></h3>
-	  <h3><a href="">协议工作的感悟</a></h3>
 	<hr>
 	  <p>随手记录的工作内容、踩坑、感悟片断，成熟了便有了完整的文章</p>
 	  <h3><a href="/tm.html">我的日常笔记</a></h3>
