--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>蛙二的记忆</title>
-  <link href="/style.css?v9" rel="stylesheet" type="text/css">
+  <link href="/style.css?v=1" rel="stylesheet" type="text/css">
+	<script src="/alg/dep.js" type="text/javascript"></script>
+	<script src="/alg/buss.js?v=1" type="text/javascript"></script>
 </head>
 <body>
   <article>
 	<p>不积跬步，无以至千里；不积小流，无以成江海。</p>
-	<p>记录学习的点滴，留下成长的印记。</p>
 	<h2>思考与沉淀</h2>
 	  <h3><a href="/rumi/vcs.html">版本管理工具</a></h3>
 	  <h3><a href="/rumi/lua_c_exchange.html">Lua与C语言的交互</a></h3>
@@ -20,10 +21,15 @@
 	  <h3><a href="">对Linux系统的理解</a></h3>
 	  <h3><a href="">我所熟悉的动态语言</a></h3>
 	  <h3><a href="">Web开发和这个站点的历程</a></h3>
-	  <h3><a href="">域名和DNS</a></h3>
 	<hr>
-	  <p>随手记录的工作内容、踩坑、感悟片断，成熟了便有了完整的文章</p>
+	  <p>随手记录的工作内容、踩坑、感悟</p>
 	  <h3><a href="/tm.html">我的日常笔记</a></h3>
+    <hr>
+	  <p>闪念笔记</p>
+	  <textarea id="txt"></textarea>
+<button onclick="pull_art()">pull</button>
+<button onclick="push_art()">push</button>
+<br><label id="hnt"></label>
   </article>
   <footer class="footer">© 2014 - 2024</footer>
 </body>
