fix: memo with user

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ select {width:20%;}
 	<option value="2">2</option>
 	<option value="3">3</option>
 	<option value="4">4</option>
-	<option value="5">5</option>
+	<option value="user">user</option>
 </select>
 <button onclick="pull_art()">pull</button>
 <button onclick="push_art()">push</button>
