--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ select {width:20%;}
 	  <p>闪念笔记</p>
 	  <textarea id="txt"></textarea>
 <select id="sel">
-	<option value="1">1</option>
-	<option value="2">2</option>
-	<option value="3">3</option>
-	<option value="4">4</option>
+	<option value="1">sci</option>
+	<option value="2">lit</option>
+	<option value="3">misc</option>
+	<option value="4">inbox</option>
 	<option value="user">user</option>
 </select>
 <button onclick="pull_art()">pull</button>
