up rumi protocol

--- a/rumi/protocol_work.html
+++ b/rumi/protocol_work.html
@@ -36,6 +36,7 @@
 <h2 id="at-1704">协议的定义和期望 at 17.04</h2>
 <p>每一个软件只要不是像HelloWorld那样纯入门性质的软件，它一定承载了某种功能，想让它完成某种功能就要有固定的格式，这种格式便是接口，如果网络化了又可以称之为协议。Unix时代的软件多是单机执行，也存在着格式的要求，比如grep就要求第一个参数是搜索关键词，第二个及以后是要搜索的文件名，缺少或者乱了都不行，到了网络时代因为传输的复杂性，接口的要求也愈加复杂，但本质都是对输入的一种约定。有了输入，则软件会按预设的行为给出结果，同样拿grep为例，它会将文件拆分成以行为单位，并将每行和给定关键词进行匹配，一旦匹配成功则输出这行的内容。至于正则表达式如何被编译，又如果匹配，使用者无需关心。</p>
 <p>同样的对于业务层协议，要定义一种业务的输入格式及反应行为的期望结果，至于背后的实现逻辑不需要也不应该在协议定义，当然如果我们对这块业务很熟悉，看到接口大致能推断出背后的逻辑是什么样的，当然这不是必须。</p>
+<p>如何定义接口？能用一个概念表示的东西，绝不用两个概念。两个概念如果不能有多种组合方式，那就合成一个概念。两个 class 里重复的东西，拆出来变成第三个类。需要别人 subclass 的东西，在库里提供几个常用的 subclass 的例子，但是要讲清楚哪些是 core class，哪些是 facilitate class。经年累月的坚持上面的原则</p>
 <h3 id="_1">协议的层次</h3>
 <p>对于分层OSI给出了七层模型，通常业务协议不需要如此复杂，传输层(TCP/UDP)+标识层+载荷就够了。通常TCP占主流，UDP更多的用在实时的音视频流或NAT中，标识层衔接了传输层和载荷，作用是指示分包、加密、校验和等功能，这一层要考虑不同客户端的便利性。载荷层负责描述业务内容，多为消息封装格式，常见的有XML或JSON，如果觉得文本格式浪费体积也有Protobuff或MsgPack这类Binary的消息封装。对于秒级的消息通信业务而言，消息大小、解析时间并不是瓶颈，我认为简单易懂且普及(JS天生支持使得在Web领域更是加分)的JSON是够用了。像Protobuff则是到了毫秒级的通信场景下才能发挥更大的作用。</p>
 <h3 id="_2">协议体系的自洽</h3>
