use pamphlet instead rumi

--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>蛙二的记忆</title>
-  <link href="/style.css?v=2" rel="stylesheet" type="text/css">
+<style>
+body{color:#111;background-color:#f4f4f4;}
+header{font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;font-weight:bold;}
+h1{font-size:2em;background-color:#202020;color:#e7e7e7;margin:0;padding-top:0.5em;padding-left:0.5em;}
+h2{font-size:1.7em;color:#037;padding-top:0.2em;margin:0.2em;}
+h3{color:#409eff;}p{font-family:Montserrat, sans-serif;font-size:1.2em;}
+em{color:#00f;font-style:normal;}strong{color:#f00;font-style:normal;}
+ul li{list-style:circle;}ol li{list-style:hiragana;}
+article{background-color:#ececec;max-width:80rem;margin:0 auto;padding:0 1rem;}
+.footer{margin: 0 auto;text-align: center}
+@media screen and (max-width: 400px) { #kwd{width: 100px;} }
+</style>
 </head>
 <body>
   <article>
 	<p>不积跬步，无以至千里；不积小流，无以成江海。</p>
 	<h2>思考与沉淀</h2>
-	  <h3><a href="/rumi/vcs.html">版本管理工具</a></h3>
-	  <h3><a href="/rumi/lua_c_exchange.html">Lua与C语言的交互</a></h3>
-	  <h3><a href="/rumi/learn_lua.html">Lua语言学习总结</a></h3>
-	  <h3><a href="/rumi/learn_scheme.html">Scheme语言学习总结</a></h3>
-	  <h3><a href="/rumi/protocol_work.html">协议工作的感悟</a></h3>
+	  <h3><a href="/tm5.html">精华文章</a></h3>
 	<hr>
-	  <p>随手记录的工作内容、踩坑、感悟</p>
+	<h2>随手记</h2>
 	  <h3><a href="/tm1.html">计算科学</a></h3>
 	  <h3><a href="/tm2.html">读书思考</a></h3>
 	<hr>
