--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@ article{background-color:#ececec;max-width:80rem;margin:0 auto;padding:0 1rem;}
 </head>
 <body>
   <article>
-	<p>不积跬步，无以至千里；不积小流，无以成江海。</p>
+	<p>笔记是我们的第二大脑</p>
+	<p>不积跬步，无以至千里；不积小流，无以成江海</p>
 	<h2>思考与沉淀</h2>
-	  <h3><a href="/tm5.html">精华文章</a></h3>
+	  <h3><a href="/tm1.html">项目-计算科学</a></h3>
+	  <h3><a href="/tm2.html">兴趣-读书思考</a></h3>
 	<hr>
-	<h2>随手记</h2>
-	  <h3><a href="/tm1.html">计算科学</a></h3>
-	  <h3><a href="/tm2.html">读书思考</a></h3>
+	<h2>封存</h2>
+	  <h3><a href="/tm5.html">过往的总结</a></h3>
 	<hr>
 	<h2>整理中</h2>
 	  <h3><a href="">对Linux系统的理解</a></h3>
