new index use tm9

--- a/index.html
+++ b/index.html
@@ -19,17 +19,9 @@ article{background-color:#ececec;max-width:80rem;margin:0 auto;padding:0 1rem;}
   <article>
 	<p>笔记是我们的第二大脑</p>
 	<p>不积跬步，无以至千里；不积小流，无以成江海</p>
-	<h2>思考与沉淀</h2>
-	  <h3><a href="/tm1.html">项目-计算科学</a></h3>
-	  <h3><a href="/tm2.html">兴趣-读书思考</a></h3>
+	<h2><a href="/tm9.html">思考与沉淀</a></h2>
 	<hr>
-	<h2>封存</h2>
-	  <h3><a href="/tm5.html">过往的总结</a></h3>
-	<hr>
-	<h2>整理中</h2>
-	  <h3><a href="">对Linux系统的理解</a></h3>
-	  <h3><a href="">我所熟悉的动态语言</a></h3>
-	  <h3><a href="">Web开发和这个站点的历程</a></h3>
+	<h2><a href="/alg/memo.html">随手记</a></h2>
   </article>
   <footer class="footer">© 2014 - 2024</footer>
 </body>
