--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ button {width:22%;height:4vh;margin:0.1em;}
 select {width:20%;}
   </style>
 
-  <script src="/alg/buss.js?v=3" type="text/javascript"></script>
+  <script src="/alg/buss.js?v=4" async></script>
 </head>
 <body>
   <article>
@@ -41,6 +41,8 @@ select {width:20%;}
 <button onclick="push_art()">push</button>
 <br><pre id="hnt"></pre>
 	<h2><a href="/data/tm9.html">不成熟的想法</a></h2>
+	<h2>关于我</h2>
+	<p>毕业于浙江大学电机系，目前从事软件开发。2013~2018从事设备协议维护，建立AppWiki内部网；2019~从事数据仓库产品研发</p>
   </article>
   <footer class="footer">© 2014 - 2024</footer>
 </body>
