--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
   </style>
 
-  <script src="alg/buss.js?v=13"></script>
+  <script src="alg/buss.js?v=14"></script>
 </head>
 
 <body onload="showpanel('selfhost')">
@@ -121,8 +121,8 @@
       </div>
       <div id="u_act">
         <select db="el:act,fn:show" id="sel" name="i">
-          <option value="1" selected>sci</option>
-          <option value="3">lit</option>
+          <option value="1" selected>memo</option>
+          <option value="3">chew</option>
           <option value="2">url</option>
           <option value="4">acct</option>
           <option value="blog">blog</option>
@@ -130,7 +130,7 @@
 
         <div db="el:m" style="display:inline">
           <button onclick='W.hxdom("get", "/cgi-bin/memo.cgi", "sel", "#hnt")'>pull</button>
-          <button onclick="push_art()">push</button>
+          <button onclick="push_memo()">push</button>
         </div>
         <div db="el:b" style="display:none">
           act<input id="tid" name="tid">
