--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
   </style>
 
-  <script src="alg/buss.js?v=14"></script>
+  <script src="alg/buss.js?v=15"></script>
 </head>
 
 <body onload="showpanel('selfhost')">
@@ -141,6 +141,7 @@
         </div>
         <button onclick='clear_txt("txt")'>cls</button>
       </div>
+      <button onclick="get_stock()">stock</button>
       <pre id="hnt"></pre>
       <h2><a href="/data/tm9.html">不成熟的想法</a></h2>
     </div>
