--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     textarea {
       width: 100%;
-      font-size: 1.1em
+      font-size: 1em
     }
 
     div.auto_high {
@@ -105,18 +105,18 @@
     }
   </style>
 
-  <script src="alg/buss.js?v=15"></script>
+  <script src="alg/sep.min.js?v=1"></script>  
+  <script src="alg/buss.js?v=15" type="module"></script>
 </head>
 
-<body onload="showpanel('selfhost')">
+<body>
   <article>
-    <p>笔记是我们的第二大脑</p>
     <p>不积跬步，无以至千里；不积小流，无以成江海</p>
     <h2><a href="/tm1.html">思考与沉淀</a></h2>
     <hr>
 
     <div id="selfhost" style="display: none;">
-      <div class="auto_high" id="u_aht">
+      <div id="u_aht" class="auto_high">
         <p class="auto_high" db="el:s"></p><textarea id="txt" class="auto_high" db="el:t,fn:sync"></textarea>
       </div>
       <div id="u_act">
@@ -129,19 +129,19 @@
         </select>
 
         <div db="el:m" style="display:inline">
-          <button onclick='W.hxdom("get", "/cgi-bin/memo.cgi", "sel", "#hnt")'>pull</button>
-          <button onclick="push_memo()">push:clear num/compact/*word</button>
+          <button db="el:bpll">pull</button>
+          <button db="el:bpsh">push:clear num/compact/*word</button>
         </div>
         <div db="el:b" style="display:none">
           act<input id="tid" name="tid">
-          <button onclick='do_blog("tid", "txt")'>blog</button>
+          <button db="el:bblg">blog</button>
         </div>
         <div db="el:t" style="display:none">
-          <button onclick='do_tmrec("tid", "txt")'>tmrec</button>
+          <button>tmrec</button>
         </div>
-        <button onclick='clear_txt("txt")'>cls</button>
+        <button db="el:bcls">cls</button>
+        <button db="el:bstk">stock</button>
       </div>
-      <button onclick="get_stock()">stock</button>
       <pre id="hnt"></pre>
       <h2><a href="/data/tm9.html">不成熟的想法</a></h2>
     </div>
