fix: change cgi-bin route path to adapt lude.cgi

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     div.auto_high {
       position: relative;
-      min-height: 5vh;
+      min-height: 10rem;
     }
 
     p.auto_high {
@@ -83,7 +83,7 @@
       white-space: pre-wrap;
       word-wrap: break-word;
       visibility: hidden;
-      line-height: 0.75;
+      line-height: 0.8;
     }
 
     textarea.auto_high {
