fix: module not support inner script

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     }
   </style>
 
-  <script src="alg/sep.min.js?v=2"></script>  
+  <script src="/static/mel.min.js?v=2"></script>  
   <script src="alg/buss.js?v=16" type="module"></script>
 </head>
 
