--- a/mmm.html
+++ b/mmm.html
@@ -26,7 +26,7 @@ textarea.auto_high {
   box-sizing: border-box;
 }
 </style>
-<script type="module">
+<script type="text/javascript">
 async function pull_art(){
   let r = await W.awax("get", "/cgi-bin/lude.cgi/memo/pull")
   let res = W.jq("#res")
@@ -55,7 +55,6 @@ async function stock(){
   let res = W.jq("#res")
   res(r)
 }
-W.ko("u_aht").sync = (v,m)=>{m.s(v)}
 </script>
 </head>
 <body>
@@ -74,6 +73,9 @@ W.ko("u_aht").sync = (v,m)=>{m.s(v)}
 <br>
 <button onclick="stock()">stock</button> <input id="tmdt" type="text">
 <div id="res"> </div>
+<script type="text/javascript">
+W.ko("u_aht").sync = (v,m)=>{m.s(v)}
+</script>
 </body>
 </html>
 
