fix: let script outside body

--- a/mmm.html
+++ b/mmm.html
@@ -73,9 +73,7 @@ async function stock(){
 <br>
 <button onclick="stock()">stock</button> <input id="tmdt" type="text">
 <div id="res"> </div>
-<script type="text/javascript">
-W.ko("u_aht").sync = (v,m)=>{m.s(v)}
-</script>
 </body>
+<script type="text/javascript">W.ko("u_aht").sync = (v,m)=>{m.s(v)}</script>
 </html>
 
