--- a/mmm.html
+++ b/mmm.html
@@ -9,6 +9,7 @@
 div.auto_high {
   position: relative;
   min-height: 6rem;
+  margin-bottom: 0.5em;
 }
 p.auto_high {
   font-size: 1em;
@@ -22,7 +23,6 @@ textarea.auto_high {
   position: absolute;
   top: 0;
   height: 100%;
-  box-sizing: border-box;
 }
 </style>
 <script type="text/javascript">
