fix: add split 3 entry

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
   <article>
     <p>不积跬步，无以至千里；不积小流，无以成江海</p>
     <h2><a href="/tm1.html">思考与沉淀</a></h2>
+    <h3><a href="/tmb1.html">技术</a></h3>
+    <h3><a href="/tmb2.html">文史</a></h3>
+    <h3><a href="/tmp5.html">封档</a></h3>
     <hr>
 
     <div id="selfhost" style="display: none;">
