fix: stock seperate and push_tm alert

--- a/mmm.html
+++ b/mmm.html
@@ -38,17 +38,17 @@ async function push_art(){
 async function pull_tm(){
   let dt = W.jq("#tmdt")
   let r = await W.awax("get", "/cgi-bin/pyde.cgi/art/tmread", {db:"shuw",dt:dt()})
-  W.jq("#res")(r)
+  W.jq("#tes")(r)
 }
 async function push_tm(){
   let dt = W.jq("#tmdt")
   let t = W.jq("#txt")
   let r = await W.awax("get", "/cgi-bin/pyde.cgi/art/tmupload", {db:"shuw",dt:dt(),txt:btoa(String.fromCharCode(...new TextEncoder().encode(t())))})
-  W.jq("#res")(r)
+  alert(r)
 }
 async function stock(){
   let r = await W.awax("get", "/cgi-bin/lude.cgi/memo/stock")
-  W.jq("#res")(r)
+  W.jq("#ses")(r)
 }
 </script>
 </head>
@@ -67,8 +67,9 @@ async function stock(){
 <button class="c2" onclick="push_tm()">wrtm</button>
 <br>
 <button onclick="stock()">stock</button> <input id="tmdt" type="text">
-<pre id="mes"> </pre>
-<div id="res"> </div>
+<pre id="mes"></pre>
+<div id="tes"></div>
+<div id="ses"></div>
 </body>
 <script type="text/javascript">W.ko("u_aht").sync = (v,m)=>{m.s(v)}</script>
 </html>
