--- a/mmm.html
+++ b/mmm.html
@@ -3,8 +3,8 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>wabok-mmm</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="/static/mel.css?v=3" rel="stylesheet" type="text/css">
-	<script src="/static/mel.min.js?v=2" type="text/javascript"></script>
+	<link href="/static/mel.min.css?v=3" rel="stylesheet" type="text/css">
+	<script src="/static/mel.min.js?v=3" type="text/javascript"></script>
 <style>
 div.auto_high {
   position: relative;
