fix: tmrec only allow 6digit

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
       <summary>关于我</summary>
       <p>2019~ 从事数据仓库和数据分析产品的研发</p>
       <p>2013~2018 从事设备协议维护，建立AppWiki内部网</p>
-      <p>毕业于浙江大学电机系，在日本电装（名古屋）工作3年</p>
+      <p>2007~2010，在日本电装（名古屋）从事车载ECU开发</p>
+      <p>硕士毕业于浙江大学电机系</p>
     </details>
   </article>
   <footer class="footer">© 2014 - 2025</footer>
