feat: fts add topage

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
           <option value="3">chew</option>
           <option value="2">snip</option>
           <option value="4">uu</option>
+          <option value="fts">fts</option>
           <option value="blog">blog</option>
         </select>
 
@@ -140,7 +141,8 @@
           <button db="fn:bblg">blog</button>
         </div>
         <div db="el:t" style="display:none">
-          <button>tmrec</button>
+          <button db="fn:bfts_get">fts_query</button>
+          <button db="fn:bfts_set">fts_insup</button>
         </div>
         <button db="fn:bcls">cls</button>
         <button db="fn:bstk">stock</button>
