--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
       </div>
       <div id="u_act">
         <select db="el:act,fn:show" id="sel" name="i">
-          <option value="fts">fts</option>
-          <option value="1" selected>memo</option>
           <option value="blog">blog</option>
-          <option value="3">chew</option>
+          <option value="fts" >fts</option>
+          <option value="3" selected>chew</option>
           <option value="4">uu</option>
         </select>
 
@@ -135,8 +134,10 @@
           <button db="fn:bpll">pull</button>
           <button db="fn:bpsh">push:clear num/compact/*word</button>
         </div>
-        <div db="el:b" style="display:none">
+        <div db="el:i" style="display:none">
           act<input id="tid" name="tid">
+        </div>
+        <div db="el:b" style="display:none">
           <button db="fn:bblg">blog</button>
         </div>
         <div db="el:t" style="display:none">
